// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorInput Snapshots renders a dark checkIcon if hex value is light 1`] = `
.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  padding-right: 16px;
  width: 116px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: px;
}

.emotion-2:not([disabled]):focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-6c7mlq 100ms;
  animation: animation-6c7mlq 100ms;
  box-shadow: inset 0 0 0 2px #0875e1;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-6 {
  display: inline-block;
  position: absolute;
  left: 6px;
  top: 8px;
}

.emotion-6 svg {
  display: block;
}

.emotion-6 .wd-icon-fill {
  fill: #000000;
}

.emotion-6:hover .wd-icon-fill {
  fill: #000000;
}

.emotion-6 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-6:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-6 .wd-icon-background {
  fill: transparent;
}

.emotion-6:hover .wd-icon-background {
  fill: transparent;
}

<div
  className="emotion-7 emotion-8"
>
  <span
    className="emotion-0 emotion-1"
  >
    #
  </span>
  <input
    className="emotion-2 emotion-3"
    maxLength={7}
    onChange={[Function]}
    placeholder="FFFFFF"
    spellCheck={false}
    type="text"
    value="ffffff"
  />
  <div
    className="emotion-4 emotion-5"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <span
    className="emotion-6"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</div>
`;

exports[`ColorInput Snapshots renders a disabled input 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  padding-right: 16px;
  width: 116px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: #f0f1f2;
}

.emotion-2:not([disabled]):focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-6c7mlq 100ms;
  animation: animation-6c7mlq 100ms;
  box-shadow: inset 0 0 0 2px #0875e1;
}

<div
  className="emotion-6 emotion-7"
>
  <span
    className="emotion-0 emotion-1"
  >
    #
  </span>
  <input
    className="emotion-2 emotion-3"
    disabled={true}
    maxLength={7}
    onChange={[Function]}
    placeholder="FFFFFF"
    spellCheck={false}
    type="text"
    value="ffffff"
  />
  <div
    className="emotion-4 emotion-5"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
</div>
`;

exports[`ColorInput Snapshots renders a light checkIcon if hex value is dark 1`] = `
.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  padding-right: 16px;
  width: 116px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: px;
}

.emotion-2:not([disabled]):focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-6c7mlq 100ms;
  animation: animation-6c7mlq 100ms;
  box-shadow: inset 0 0 0 2px #0875e1;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-6 {
  display: inline-block;
  position: absolute;
  left: 6px;
  top: 8px;
}

.emotion-6 svg {
  display: block;
}

.emotion-6 .wd-icon-fill {
  fill: #ffffff;
}

.emotion-6:hover .wd-icon-fill {
  fill: #ffffff;
}

.emotion-6 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-6:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-6 .wd-icon-background {
  fill: transparent;
}

.emotion-6:hover .wd-icon-background {
  fill: transparent;
}

<div
  className="emotion-7 emotion-8"
>
  <span
    className="emotion-0 emotion-1"
  >
    #
  </span>
  <input
    className="emotion-2 emotion-3"
    maxLength={7}
    onChange={[Function]}
    placeholder="FFFFFF"
    spellCheck={false}
    type="text"
    value="e6e"
  />
  <div
    className="emotion-4 emotion-5"
    style={
      Object {
        "backgroundColor": "#e6e",
      }
    }
  />
  <span
    className="emotion-6"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-check-small wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path fill-rule=\\"nonzero\\" d=\\"M17.314 6.828l1.06 1.061a.5.5 0 0 1 0 .707l-7.778 7.778a.5.5 0 0 1-.707 0L6.354 12.84a.5.5 0 0 1 0-.707l1.06-1.06a.5.5 0 0 1 .707 0l2.122 2.12 6.364-6.364a.5.5 0 0 1 .707 0z\\" class=\\"wd-icon-fill\\"/></g></svg>",
      }
    }
  />
</div>
`;

exports[`ColorInput Snapshots renders as expected 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  padding-right: 16px;
  width: 116px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: px;
}

.emotion-2:not([disabled]):focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-6c7mlq 100ms;
  animation: animation-6c7mlq 100ms;
  box-shadow: inset 0 0 0 2px #0875e1;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  className="emotion-6 emotion-7"
>
  <span
    className="emotion-0 emotion-1"
  >
    #
  </span>
  <input
    className="emotion-2 emotion-3"
    maxLength={7}
    onChange={[Function]}
    placeholder="FFFFFF"
    spellCheck={false}
    type="text"
    value=""
  />
  <div
    className="emotion-4 emotion-5"
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
</div>
`;

exports[`ColorInput Snapshots renders valid empty color input 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  padding-right: 16px;
  width: 116px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: px;
}

.emotion-2:not([disabled]):focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-6c7mlq 100ms;
  animation: animation-6c7mlq 100ms;
  box-shadow: inset 0 0 0 2px #0875e1;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  className="emotion-6 emotion-7"
>
  <span
    className="emotion-0 emotion-1"
  >
    #
  </span>
  <input
    className="emotion-2 emotion-3"
    disabled={false}
    maxLength={7}
    onChange={[Function]}
    placeholder="FFFFFF"
    spellCheck={false}
    type="text"
    value=""
  />
  <div
    className="emotion-4 emotion-5"
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
</div>
`;

exports[`ColorInput Snapshots renders with a selected color 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  padding-right: 16px;
  width: 116px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: px;
}

.emotion-2:not([disabled]):focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-6c7mlq 100ms;
  animation: animation-6c7mlq 100ms;
  box-shadow: inset 0 0 0 2px #0875e1;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  className="emotion-6 emotion-7"
>
  <span
    className="emotion-0 emotion-1"
  >
    #
  </span>
  <input
    className="emotion-2 emotion-3"
    maxLength={7}
    onChange={[Function]}
    placeholder="FFFFFF"
    spellCheck={false}
    type="text"
    value="e6e"
  />
  <div
    className="emotion-4 emotion-5"
    style={
      Object {
        "backgroundColor": "#e6e",
      }
    }
  />
</div>
`;

exports[`ColorInput Snapshots renders with a selected color without # 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #a6a6a6;
  box-sizing: border-box;
  padding-left: 46px;
  padding-right: 16px;
  width: 116px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: px;
}

.emotion-2:not([disabled]):focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-6c7mlq 100ms;
  animation: animation-6c7mlq 100ms;
  box-shadow: inset 0 0 0 2px #0875e1;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  className="emotion-6 emotion-7"
>
  <span
    className="emotion-0 emotion-1"
  >
    #
  </span>
  <input
    className="emotion-2 emotion-3"
    maxLength={7}
    onChange={[Function]}
    placeholder="FFFFFF"
    spellCheck={false}
    type="text"
    value="e6e"
  />
  <div
    className="emotion-4 emotion-5"
    style={
      Object {
        "backgroundColor": "#e6e",
      }
    }
  />
</div>
`;
